[package]
name = "cgen-rs"
version = "0.1.2"
license = "MIT"
authors = ["Reto Achermann <achreto@gmail.com>"]
description = "A library for generating C/C++ code."
documentation = "https://docs.rs/cgen-rs/"
homepage = "https://github.com/achreto/cgen-rs"
repository = "https://github.com/achreto/cgen-rs"
readme = "README.md"
edition = "2021"

[dependencies]
