[package]
name = "crustal"
version = "0.3.5"
license = "MIT"
authors = ["Reto Achermann <achreto@gmail.com>"]
description = "A library for generating C/C++ code."
documentation = "https://docs.rs/crustal/"
homepage = "https://github.com/achreto/crustal"
repository = "https://github.com/achreto/crustal"
readme = "README.md"
edition = "2021"

[dependencies]
